// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemDetailIncidentSectionComponent > when itemType is ProcessDefinition > should have proper value from columnDefs 1`] = `
[
  {
    "cellDataType": false,
    "cellRenderer": "linkRenderer",
    "cellRendererParams": {
      "path": "../../process-instances",
      "pathParamField": "processInstanceId",
      "queryParamType": "incidentId",
      "requiredFieldToEnableLink": "processInstanceId",
    },
    "colId": "id",
    "comparator": [Function],
    "field": "id",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
      "filterKeyByComparator": {
        "equals": "incidentId",
      },
      "sortByKey": "incidentId",
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Incident ID",
    "initialWidth": 330,
    "lockPosition": true,
    "minWidth": 100,
    "pinned": "left",
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellClass": "pointer text-primary",
    "cellRenderer": "stackTraceRenderer",
    "cellRendererParams": {
      "isOpenModalOnClick": true,
    },
    "colId": "incidentMessage",
    "field": "incidentMessage",
    "flex": 1,
    "headerName": "Incident Message",
  },
  {
    "cellDataType": false,
    "cellRenderer": "dateRenderer",
    "colId": "createTime",
    "comparator": [Function],
    "field": "createTime",
    "filter": "dateInputFloatingFilter",
    "filterParams": {
      "comparators": [
        "inRange",
        "before",
        "after",
      ],
      "filterKeyAndValueByComparator": {
        "after": {
          "createTimeAfter": "dateFrom",
        },
        "before": {
          "createTimeBefore": "dateFrom",
        },
        "inRange": {
          "createTimeAfter": "dateFrom",
          "createTimeBefore": "dateTo",
        },
      },
      "inRangeInclusive": true,
    },
    "floatingFilter": true,
    "floatingFilterComponent": "dateInputFloatingFilter",
    "headerName": "Create Time",
    "initialSort": "desc",
    "initialWidth": 150,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "incidentType",
    "comparator": [Function],
    "field": "incidentType",
    "filter": "singleSelectFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
      "singleFilterOptions": [
        {
          "label": "Failed Job",
          "value": "failedJob",
        },
        {
          "label": "Failed External Task",
          "value": "failedExternalTask",
        },
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "singleSelectFloatingFilter",
    "headerName": "Incident Type",
    "initialWidth": 130,
    "minWidth": 130,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
    "valueGetter": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "activityId",
    "comparator": [Function],
    "field": "activityId",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Activity ID",
    "initialWidth": 150,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "activityNameFromDOMRenderer",
    "cellRendererParams": {
      "sourceField": "activityId",
    },
    "colId": "activityName",
    "comparator": [Function],
    "field": "activityName",
    "floatingFilter": true,
    "headerName": "Activity Name",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "failedActivityId",
    "comparator": [Function],
    "field": "failedActivityId",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Failed Activity ID",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "activityNameFromDOMRenderer",
    "cellRendererParams": {
      "sourceField": "failedActivityId",
    },
    "colId": "failedActivityName",
    "comparator": [Function],
    "field": "failedActivityName",
    "floatingFilter": true,
    "headerName": "Failed Activity Name",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
]
`;

exports[`ItemDetailIncidentSectionComponent > when itemType is ProcessInstance > should have proper value from columnDefs 1`] = `
[
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "cellRendererParams": {
      "path": "../../process-instances",
      "pathParamField": "processInstanceId",
      "queryParamType": "incidentId",
      "requiredFieldToEnableLink": "processInstanceId",
    },
    "colId": "id",
    "comparator": [Function],
    "field": "id",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
      "filterKeyByComparator": {
        "equals": "incidentId",
      },
      "sortByKey": "incidentId",
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Incident ID",
    "initialWidth": 330,
    "lockPosition": true,
    "minWidth": 100,
    "pinned": "left",
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellClass": "pointer text-primary",
    "cellRenderer": "stackTraceRenderer",
    "cellRendererParams": {
      "isOpenModalOnClick": true,
    },
    "colId": "incidentMessage",
    "field": "incidentMessage",
    "flex": 1,
    "headerName": "Incident Message",
  },
  {
    "cellDataType": false,
    "cellRenderer": "dateRenderer",
    "colId": "createTime",
    "comparator": [Function],
    "field": "createTime",
    "filter": "dateInputFloatingFilter",
    "filterParams": {
      "comparators": [
        "inRange",
        "before",
        "after",
      ],
      "filterKeyAndValueByComparator": {
        "after": {
          "createTimeAfter": "dateFrom",
        },
        "before": {
          "createTimeBefore": "dateFrom",
        },
        "inRange": {
          "createTimeAfter": "dateFrom",
          "createTimeBefore": "dateTo",
        },
      },
      "inRangeInclusive": true,
    },
    "floatingFilter": true,
    "floatingFilterComponent": "dateInputFloatingFilter",
    "headerName": "Create Time",
    "initialSort": "desc",
    "initialWidth": 150,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "incidentType",
    "comparator": [Function],
    "field": "incidentType",
    "filter": "singleSelectFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
      "singleFilterOptions": [
        {
          "label": "Failed Job",
          "value": "failedJob",
        },
        {
          "label": "Failed External Task",
          "value": "failedExternalTask",
        },
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "singleSelectFloatingFilter",
    "headerName": "Incident Type",
    "initialWidth": 130,
    "minWidth": 130,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
    "valueGetter": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "activityId",
    "comparator": [Function],
    "field": "activityId",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Activity ID",
    "initialWidth": 150,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": true,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "activityNameFromDOMRenderer",
    "cellRendererParams": {
      "sourceField": "activityId",
    },
    "colId": "activityName",
    "comparator": [Function],
    "field": "activityName",
    "floatingFilter": true,
    "headerName": "Activity Name",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "truncateWithTooltipRenderer",
    "colId": "failedActivityId",
    "comparator": [Function],
    "field": "failedActivityId",
    "filter": "defaultFloatingFilter",
    "filterParams": {
      "comparators": [
        "equals",
      ],
    },
    "floatingFilter": true,
    "floatingFilterComponent": "defaultFloatingFilter",
    "headerName": "Failed Activity ID",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
  {
    "cellDataType": false,
    "cellRenderer": "activityNameFromDOMRenderer",
    "cellRendererParams": {
      "sourceField": "failedActivityId",
    },
    "colId": "failedActivityName",
    "comparator": [Function],
    "field": "failedActivityName",
    "floatingFilter": true,
    "headerName": "Failed Activity Name",
    "initialWidth": 200,
    "minWidth": 100,
    "resizable": true,
    "rowDrag": false,
    "sortable": false,
    "suppressFloatingFilterButton": true,
    "suppressKeyboardEvent": [Function],
  },
]
`;
